--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@
   padding: 5px;
   padding-bottom: 20px;
   margin-bottom: 10px;
-  border: px white solid;
+  /*border: px white solid;*/
   flex-direction: column;
 }
 /*expand and collapse icon*/
@@ -142,7 +142,7 @@
   color: whitesmoke;
   height: 2rem;
   width: 12rem;
-  border: 0px white solid;
+  /*border: 0px white solid;*/
 
   padding-left: 20px;
   margin-top: -5px;
@@ -155,7 +155,7 @@
   /*grid-area: def;*/
   color: whitesmoke;
 
-  border: px white solid;
+  /*border: px white solid;*/
   margin-top: 20px;
   margin-left: 25px;
   margin-right: 45px;
@@ -211,7 +211,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #023020;
-  border: px solid black;
+  /*border: px solid black;*/
   box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
 }
 
@@ -263,7 +263,7 @@
     color: whitesmoke;
     height: 2rem;
     width: 4rem;
-    border: 0px white solid;
+    /*border: 0px white solid;*/
 
     font-family: "Roboto Slab", serif;
 
@@ -278,7 +278,7 @@
     color: whitesmoke;
     height: 2rem;
     width: 12rem;
-    border: 0px white solid;
+    /*border: 0px white solid;*/
 
     padding-left: 20px;
     margin-top: -5px;
@@ -290,7 +290,7 @@
     grid-area: def;
     color: whitesmoke;
 
-    border: px white solid;
+    /*border: px white solid;*/
     margin-top: 15px;
     margin-left: 45px;
     margin-right: 45px;
@@ -314,7 +314,7 @@
     flex-direction: column;
     align-items: center;
 
-    border: px solid black;
+    /*border: px solid black;*/
     overflow: auto;
   }
   .quiz {
@@ -330,7 +330,7 @@
     align-items: center;
     background-color: #023020;
 
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
   }
 }
@@ -380,7 +380,7 @@
   flex-direction: column;
   align-items: center;
 
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   background: white;
 
   z-index: 12;
@@ -400,7 +400,7 @@
   flex-direction: column;
   align-items: center;
 
-  border: px solid black;
+  /*border: px solid black;*/
   /*background-color: #09071f;*/
   background: linear-gradient(to right, #647dee, #7f53ac);
   /*background: linear-gradient(to right, #e0ffff, #bdfff3);
